still needs work

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,7 +1,6 @@
-<h2>{{title}}</h2>
-<h3>Sign up page</h3>
+<h3>Sign up</h3>
 
-
+<div id="form"></div>
   <form action="/signup" method="POST">
  
     <label> Username
