--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,1 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-
-    <ul>
-      <li><a href="/">Home page</a></li>
-      <li><a href="/signup">Signup</a></li>
-    </ul>
+<h2>Home Page</h2>
