--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,16 +1,27 @@
-<!DOCTYPE html>
 <html lang="en">
 
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
 
   <body>
- 
+    <nav>
+      <a href="/"><button>Home</button></a>
+      <a href="/Login"><button>Login</button></a>
+      <a href="/Signup"><button>Signup</button></a>
+      {{#if username}}
+        <a href="/profile"><button>Profile</button></a>
+
+        <form id="logout-form" action="/logout" method="POST">
+          <button>Logout</button>
+        </form>
+      {{/if}}
+    </nav>
+
     {{{body}}}
 
     <script src="/js/script.js"></script>
